--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "orders-ms"]
 	path = orders-ms
 	url = https://github.com/Nest-Microservices21/orders-microservice.git
+[submodule "product-ms"]
+	path = product-ms
+	url = https://github.com/Nest-Microservices21/products-microservice.git
