--- a/compose.dev.yaml
+++ b/compose.dev.yaml
@@ -25,6 +25,8 @@ services:
       - NATS_SERVERS=${NATS_SERVER}
       - JWT_SECRET=${JWT_SECRET}
       - JWT_EXPIRES_IN=${JWT_EXPIRES_IN}
+      - JWT_REFRESH_SECRET=${JWT_REFRESH_SECRET}
+      - JWT_REFRESH_EXPIRES_IN=${JWT_REFRESH_EXPIRES_IN}
     networks:
       - backend-network
     volumes:
@@ -138,6 +140,8 @@ services:
     - JWT_SECRET=${JWT_SECRET}
     - JWT_EXPIRES_IN=${JWT_EXPIRES_IN}
     - MONGODB_URL=${MONGO_DATABASE_URL}
+    - JWT_REFRESH_SECRET=${JWT_REFRESH_SECRET}
+    - JWT_REFRESH_EXPIRES_IN=${JWT_REFRESH_EXPIRES_IN}
 volumes:
   orders-ms_db-data:
     external: true
